// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@aws-amplify/ui-react exports should match snapshot 1`] = `
Array [
  "Alert",
  "AmplifyProvider",
  "Authenticator",
  "Autocomplete",
  "Badge",
  "Button",
  "ButtonGroup",
  "Card",
  "CheckboxField",
  "Collection",
  "ComponentClassNames",
  "ComponentClassObject",
  "ComponentPropsToStylePropsMap",
  "ComponentPropsToStylePropsMapKeys",
  "Divider",
  "Expander",
  "ExpanderItem",
  "FieldGroupIcon",
  "FieldGroupIconButton",
  "Flex",
  "Geocoder",
  "Grid",
  "Heading",
  "HighlightMatch",
  "Icon",
  "Image",
  "Link",
  "Loader",
  "LocationSearch",
  "MapView",
  "Menu",
  "MenuButton",
  "MenuItem",
  "Pagination",
  "PasswordField",
  "PhoneNumberField",
  "Placeholder",
  "Radio",
  "RadioGroupField",
  "Rating",
  "ScrollView",
  "SearchField",
  "SelectField",
  "SliderField",
  "StepperField",
  "SwitchField",
  "TabItem",
  "Table",
  "TableBody",
  "TableCell",
  "TableFoot",
  "TableHead",
  "TableRow",
  "Tabs",
  "Text",
  "TextAreaField",
  "TextField",
  "ThemeProvider",
  "ToggleButton",
  "ToggleButtonGroup",
  "View",
  "VisuallyHidden",
  "components",
  "createTheme",
  "defaultDarkModeOverride",
  "defaultTheme",
  "primitives",
  "translations",
  "useAmplify",
  "useAuthenticator",
  "useBreakpointValue",
  "usePagination",
  "useTheme",
  "withAuthenticator",
]
`;

exports[`@aws-amplify/ui-react/internal exports should match snapshot 1`] = `
Array [
  "IconAdd",
  "IconCheck",
  "IconCheckCircle",
  "IconCheckCircleOutline",
  "IconChevronLeft",
  "IconChevronRight",
  "IconClose",
  "IconError",
  "IconExpandMore",
  "IconFiberManualRecord",
  "IconHighlightOff",
  "IconIndeterminate",
  "IconInfo",
  "IconMenu",
  "IconRemove",
  "IconSearch",
  "IconStar",
  "IconVisibility",
  "IconVisibilityOff",
  "IconWarning",
  "PrimitiveCatalog",
  "createDataStorePredicate",
  "findChildOverrides",
  "getOverrideProps",
  "getOverridesFromVariants",
  "mergeVariantsAndOverrides",
  "useAuth",
  "useAuthSignOutAction",
  "useDataStoreBinding",
  "useDataStoreCollection",
  "useDataStoreCreateAction",
  "useDataStoreDeleteAction",
  "useDataStoreItem",
  "useDataStoreUpdateAction",
  "useNavigateAction",
  "useStateMutationAction",
  "useStorageURL",
]
`;

exports[`@aws-amplify/ui-react/legacy exports should match snapshot 1`] = `
Array [
  "AmplifyAuthenticator",
  "AmplifyChatbot",
  "AmplifyPhotoPicker",
  "AmplifyPicker",
  "AmplifyS3Album",
  "AmplifyS3Image",
  "AmplifyS3ImagePicker",
  "AmplifyS3Text",
  "AmplifyS3TextPicker",
  "AmplifySignIn",
  "AmplifySignOut",
  "withAuthenticator",
]
`;

exports[`primitive catalog should match primitives list snapshot 1`] = `
Array [
  "Alert",
  "Autocomplete",
  "Badge",
  "Button",
  "ButtonGroup",
  "Card",
  "CheckboxField",
  "Collection",
  "Divider",
  "Expander",
  "ExpanderItem",
  "FieldGroupIcon",
  "FieldGroupIconButton",
  "Flex",
  "Grid",
  "Heading",
  "HighlightMatch",
  "Icon",
  "Image",
  "Link",
  "Loader",
  "Menu",
  "MenuButton",
  "MenuItem",
  "Pagination",
  "PasswordField",
  "PhoneNumberField",
  "Placeholder",
  "Radio",
  "RadioGroupField",
  "Rating",
  "ScrollView",
  "SearchField",
  "SelectField",
  "SliderField",
  "StepperField",
  "SwitchField",
  "TabItem",
  "Table",
  "TableBody",
  "TableCell",
  "TableFoot",
  "TableHead",
  "TableRow",
  "Tabs",
  "Text",
  "TextAreaField",
  "TextField",
  "ToggleButton",
  "ToggleButtonGroup",
  "View",
  "VisuallyHidden",
]
`;
